--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "daisyui": "^2.43.0",
+    "postcss": "^8.4.20",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.8",
-    "daisyui": "^2.43.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
   }
 }
