--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://AbhinavGupta2002.github.io/Personal_Website_2",
   "name": "personal-website",
   "version": "0.1.0",
   "private": true,
@@ -14,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,6 +43,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.43.0",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.20",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
