--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "http://AbhinavGupta2002.github.io/Personal_Website_2",
   "name": "personal-website",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
