Minor change to get it working with domain

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://AbhinavGupta2002.github.io/Personal_Website_2",
+  "homepage": "https://AbhinavGupta2002.github.io/Personal_Website_2",
   "name": "personal-website",
   "version": "0.1.0",
   "private": false,
