Minor change to get it working with domain

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://abhinavgupta.info",
+  "homepage": "https://www.abhinavgupta.info",
   "name": "personal-website",
   "version": "0.1.0",
   "private": false,
