--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-social-media-embed": "^2.5.13",
     "react-type-animation": "^2.1.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
